fix: change color of story map chapter links to improve contrast

--- a/src/storyMap/components/StoryMap.css
+++ b/src/storyMap/components/StoryMap.css
@@ -73,7 +73,7 @@ footer {
   background-color: #ffffff;
 }
 #story-map-title .step-content a {
-  color: #1671bc;
+  color: #358eae;
 }
 
 #story-map-title h1,
